Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-rc1
-
None
Description
This was fixed once in https://codereview.qt-project.org/151181
But after https://codereview.qt-project.org/155593 it is broken again.
DebuggerPluginPrivate::updateActiveLanguages() activates the languages according to dd->m_currentEngine->runParameters().languages, but it is called before the currentEngine is set.
Attachments
For Gerrit Dashboard: QTCREATORBUG-16099 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156080,3 | Debugger: Fix language context actions | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |