Debugger: Fix language context actions

... again

Task-number: QTCREATORBUG-16099
Change-Id: Ie0a902a3161ca72cf78695639598eac5fdcbace5
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>
Reviewed-by: hjk <hjk@theqtcompany.com>